# digsim

./: .gitignore  README.md  comparedat.py
ada/: Makefile
ada/build01/: digsim.adb
ada/build02/: advance_states.adb  cleanup.adb  default_data.adb  deriv.ads  differential_equations.adb  digsim.adb  global.ads  initialization.adb  iomap.ads  termination_conditions.adb
ada/build03/: calculate.adb  digsimio.ads  global.ads  initialize.adb  set_defaults.adb  termination.adb
ada/build04/: calculate.adb  digsimio.ads  global.ads  initialize.adb  set_defaults.adb  termination.adb
ada/build05/: Makefile  Makefile~  calculate.adb  digsimio.ads  discrete.adb  global.ads  initialize.adb  output.plt  set_defaults.adb
ada/build06/: calculate.adb  constants.ads  digsimio.ads  global.ads  initialize.adb  set_defaults.adb  termination.adb
ada/build07/: airframe.adb  airframe.ads  basename.adb  calculate.adb  digsimio.ads  events.ads  fcomp.adb  fcomp.ads  global.ads  initialize.adb  kinematics.adb  kinematics.ads  seeker.adb  set_defaults.adb
ada/build08/: airframe.adb  airframe.ads  calculate.adb  digsimio.ads  fcomp.adb  global.ads  initialize.adb  kinematics.adb  seeker.ada  (+7 more)
f77/: Makefile
formal/: _CoqProject  build01.kya  formal-intro.md  formal-summary.html  formal-summary.org  formal-summary.txt  odetest.kya  proposal.html  proposal.org
formal/theories/Task01/: CMakeLists.txt  README.md  build1.c  build1.v  diffeq.c  diffeq.v  onestep.c  onestep.v  plot.sh  run_sim.c  run_sim.v  state.h  state_list.c
gcc/: Makefile
hs/: .gitignore
rls/: .rustc_info.json
(+847 files in other folders)
